Add RegisterForm & navbar

--- a/Form/style.css
+++ b/Form/style.css
@@ -42,12 +42,21 @@ header h1 {
     letter-spacing: 2px
 }
 
+.subtitle {
+    float: right;
+    font-size: 26px;
+    font-weight: normal;
+    letter-spacing: 3px;
+    margin: 4px 25px 0px;
+}
+
 /* main */
 main .out {
-    width: 350px;
+    float: right;
+    width: 1120px;
     border: #004B84 2px solid;
     border-radius: 30px;
-    margin: 80px auto;
+    margin: 15px auto;
 
 }
 
@@ -56,21 +65,42 @@ main p {
     font-weight: bold;
     text-align: center;
     color: #4479a1;
-    margin: 30px 0px 0px;
+    margin: 15px 0px 10px;
     letter-spacing: 2px
 }
 
-main .in {
+table, td {
+    /* border: 1px #004B84 solid; */
+    border-collapse: collapse;
+    width: 1060px;
+    margin: 10px 30px;
     color: #4479a1;
-    font-size: 20px;
     font-weight: 600;
-    margin: 30px 65px 40px;
+    font-size: 17px;
 }
 
-#account, #password {
+td {
+    height: 35px;
+}
+
+.input {
     border: 0;
     border-bottom: 1.5px #4479a1 solid;
     font-size: 16px;
+    width: 120px;
+    font-family: sans-serif;
+}
+
+.remark {
+    border: 0;
+    border-bottom: 1.5px #4479a1 solid;
+    font-size: 14px;
+}
+
+span {
+    color: black;
+    font-family: sans-serif;
+    font-weight: lighter;
 }
 
 .btn {
@@ -79,7 +109,7 @@ main .in {
     letter-spacing: 2px;
     width: 120px;
     height: 35px;
-    margin: 10px 118px 30px;
+    margin: 15px 490px 20px;
     color: #004B84;
     background-color: #c6eeff;
     border: 0;
@@ -91,4 +121,44 @@ main .in {
     background-color: #004b84d1;
     color: white;
     cursor: pointer;
+}
+
+/* navbar */
+nav, form {
+    float: left;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 65px;
+    height: 500px;
+    background-color: #fffbe4;
+    color: #004B84;
+    font-weight: 700;
+}
+
+nav a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+}
+
+nav a:hover {
+    background-color: #4479a1;
+    color: white;
+}
+
+ul p {
+    font-size: 12px;
+    color: #004B84;
+    margin-top: 285px;
+}
+
+.update_date, .update_time {
+    color: #004B84;
 }
