--- a/Register/style.css
+++ b/Register/style.css
@@ -4,6 +4,11 @@ body {
 }
 
 /* header */
+header {
+    position: sticky;
+    top: 0;
+}
+
 header div {
     background-color: #c6eeff;
     margin: 0px;
@@ -50,7 +55,7 @@ main .out {
     width: 400px;
     border: #004B84 2px solid;
     border-radius: 30px;
-    margin: 55px auto;
+    margin: 55px 360px;
 
 }
 
@@ -102,4 +107,44 @@ select {
     background-color: #004b84d1;
     color: white;
     cursor: pointer;
+}
+
+/* navbar */
+nav, form {
+    float: left;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 65px;
+    height: 500px;
+    background-color: #fffbe4;
+    color: #004B84;
+    font-weight: 700;
+}
+
+nav a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+}
+
+nav a:hover {
+    background-color: #4479a1;
+    color: white;
+}
+
+ul p {
+    font-size: 12px;
+    color: #004B84;
+    margin-top: 285px;
+}
+
+.update_date, .update_time {
+    color: #004B84;
 }
