--- a/Register/style.css
+++ b/Register/style.css
@@ -118,7 +118,7 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 65px;
+    width: 60px;
     height: 500px;
     background-color: #fffbe4;
     color: #004B84;
@@ -131,7 +131,11 @@ nav a {
     display: block;
     text-align: center;
     font-size: 15px;
-    padding: 10px;
+    padding: 5px;
+}
+
+nav .second_img {
+    opacity: 0;
 }
 
 nav a:hover {
@@ -139,10 +143,23 @@ nav a:hover {
     color: white;
 }
 
+nav a:hover .first_img {
+    opacity: 0;
+}
+
+nav a:hover .second_img {
+    opacity: 1;
+}
+
+nav img {
+    position: absolute;
+    left: 22px;
+}
+
 ul p {
     font-size: 12px;
     color: #004B84;
-    margin-top: 285px;
+    margin-top: 180px;
 }
 
 .update_date, .update_time {
