--- a/Ward/style.css
+++ b/Ward/style.css
@@ -2,15 +2,128 @@ body {
     width: 1200px;
 }
 
-h1 {
-    text-align: center;
-    background-color: #11A79C;
-    color: #ffffff;
-    padding: 10px;
-    margin-bottom: 15px;
+/* header */
+header {
+    position: sticky;
+    top: 0;
 }
 
-div {
+header div {
+    background-color: #c6eeff;
+    margin: 0px;
+    height: 50px;
+}
+
+header img {
+    float: left;
+    height: 36px;
+    margin: 7px;
+}
+
+header h1 {
+    float: left;
+    display: inline;
+    color: #004B84;
+    padding-top: 3px;
+    margin: 0px;
+    letter-spacing: 5px
+}
+
+.current_time {
+    float: left;
+    height: 29px;
+    font-size: 20px;
+    color: #004B84;
+    background-color: white;
+    padding: 4px 20px;
+    margin: 6px 15px;
+    border-radius: 10px;
+    letter-spacing: 2px
+}
+
+.subtitle {
+    float: right;
+    font-size: 26px;
+    font-weight: bold;
+    letter-spacing: 10px;
+    margin: 8px 25px 0px;
+}
+
+/* navbar */
+nav, form {
+    float: left;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+    height: 500px;
+    background-color: #fffbe4;
+    color: #004B84;
+    font-weight: 700;
+}
+
+nav a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    text-align: center;
+    font-size: 15px;
+    padding: 5px;
+}
+
+nav .second_img {
+    opacity: 0;
+}
+
+nav a:hover {
+    background-color: #4479a1;
+    color: white;
+}
+
+nav a:hover .first_img {
+    opacity: 0;
+}
+
+nav a:hover .second_img {
+    opacity: 1;
+}
+
+nav img {
+    position: absolute;
+    left: 22px;
+}
+
+ul p {
+    font-size: 12px;
+    text-align: center;
+    color: #004B84;
+    margin-top: 180px;
+    letter-spacing: 2px;
+}
+
+.update_date, .update_time {
+    font-size: 14px;
+}
+
+/* main */
+main .list {
+    border-right: #004B84 2px solid;
+    float: left;
+    width: 300px;
+    height: 500px;
+}
+
+main .status {
+    /* border: #004B84 1px solid; */
+    float: left;
+    /* width: 600px; */
+    margin: 5px 5px;
+}
+
+main .bed, main .empty_bed {
     float: left;
     width: 183px;
     height: 180px;
@@ -22,7 +135,7 @@ div {
     position: relative;
 }
 
-h2 {
+main h2 {
     text-align: center;
     margin: 0px;
     width: 183px;
@@ -39,12 +152,12 @@ h2 {
     background-color: rgba(249, 157, 197, 0.893);
 }
 
-h3, p {
+main h3, main div p {
     margin: 0px;
     width: 153px;
 }
 
-h3 {
+main h3 {
     padding: 10px 10px 5px 20px;
 }
 
@@ -52,7 +165,7 @@ h3 {
     border: 1px black solid;
 }
 
-p {
+main div p {
     padding: 5px 0px 0px 20px;
     line-height: 1.5;
 }
