--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     width: 1200px;
-    height: 500px;
 }
 
 /* header */
@@ -25,9 +24,10 @@ header h1 {
     float: left;
     display: inline;
     color: #004B84;
-    padding-top: 3px;
+    padding-top: 6px;
     margin: 0px;
-    letter-spacing: 5px
+    letter-spacing: 5px;
+    font-size: 28px;
 }
 
 .current_time {
