--- a/WardOverview/style.css
+++ b/WardOverview/style.css
@@ -87,7 +87,7 @@ button {
     font-size: 16px;
 }
 
-.female {
+/* .female {
     background-color: #FFBBE5;
 }
 
@@ -97,7 +97,7 @@ button {
 
 .not_allowed {
     background-color: #d6d6d6;
-}
+} */
 
 .ward_num {
     width: 90px;
