login & arrange bed

--- a/FloorSelect/style.css
+++ b/FloorSelect/style.css
@@ -144,12 +144,20 @@ nav img {
 }
 
 ul p {
-    text-align: center;
-    font-weight: bold;
-    letter-spacing: 2px;
     font-size: 12px;
+    text-align: center;
     color: #004B84;
-    margin-top: 110px;
+    margin-top: 30px;
+    margin-left: 3px;
+    letter-spacing: 2px;
+}
+
+.user {
+    font-size: 14px;
+    text-align: center;
+    color: #004B84;
+    margin-top: 35px;
+    letter-spacing: 1px;
 }
 
 .update_date, .update_time {
