--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -113,8 +113,17 @@ ul p {
     font-size: 12px;
     text-align: center;
     color: #004B84;
-    margin-top: 110px;
+    margin-top: 30px;
+    margin-left: 3px;
     letter-spacing: 2px;
+}
+
+.user {
+    font-size: 14px;
+    text-align: center;
+    color: #004B84;
+    margin-top: 35px;
+    letter-spacing: 1px;
 }
 
 .update_date, .update_time {
