--- a/Patient/style.css
+++ b/Patient/style.css
@@ -109,6 +109,8 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    width: 60px;
+    height: 500px;
     background-color: #fffbe4;
     color: #004B84;
     font-weight: 700;
@@ -146,13 +148,20 @@ nav img {
 }
 
 ul p {
-    display: inline-block;
-    text-align: center;
-    font-weight: bold;
-    letter-spacing: 2px;
     font-size: 12px;
+    text-align: center;
     color: #004B84;
-    margin-top: 110px;
+    margin-top: 30px;
+    margin-left: 3px;
+    letter-spacing: 2px;
+}
+
+.user {
+    font-size: 14px;
+    text-align: center;
+    color: #004B84;
+    margin-top: 35px;
+    letter-spacing: 1px;
 }
 
 .update_date, .update_time {
