--- a/EmptyBedOverview/emptyBed_style.css
+++ b/EmptyBedOverview/emptyBed_style.css
@@ -2,7 +2,7 @@
     .empty_bed {
         float: left;
         text-align: center;
-        width: 100px;
+        width: 110px;
         height: 50px;
         margin: 8px 10px 15px;
         border: 1px black solid;
@@ -16,7 +16,7 @@
 .empty_bed {
     float: left;
     text-align: center;
-    width: 100px;
+    width: 110px;
     height: 50px;
     margin: 8px 10px 15px;
     border: 1px black solid;
@@ -33,7 +33,31 @@
     background-color: #BBE7FF;
 }
 
-h2 {
-    margin-top: 12px;
+input {
+    margin: 18px 0px;
 }
 
+.bed {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.submit {
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 3px;
+    width: 120px;
+    height: 35px;
+    margin: 10px 200px;
+    color: #004B84;
+    background-color: #c6eeff;
+    border: 0;
+    border-radius: 10px;
+    transition-duration: 0.25s;
+}
+
+.submit:hover {
+    background-color: #004b84d1;
+    color: white;
+    cursor: pointer;
+}
