--- a/Patient/style.css
+++ b/Patient/style.css
@@ -63,6 +63,34 @@ header h1 {
     margin-left: 5px;
 }
 
+/* 拖曳按鈕 */
+#edit-button, #save-button, #cancel-button {
+    border-radius: 100%;
+    border: 0px;
+    padding: 0px;
+    margin: 8px 10px;
+    cursor: pointer;
+}
+
+#save-button {
+    margin-left: 60px;
+    margin-right: 0px;
+}
+
+#cancel-button {
+    margin-left: 5px;
+}
+
+.edit_btn, .save_btn, .cancel_btn {
+    margin: 0px;
+    cursor: pointer;
+}
+
+.fade-out {
+    opacity: 0.5;
+    transition: opacity 0.3s;
+}
+
 /* main */
 main {
     display: flex;
@@ -194,26 +222,31 @@ table::-webkit-scrollbar-thumb:hover {
 #table {  
     list-style-type: none;  
     padding: 0;  
-}  
+}
 
-#table tr {  
-    margin: 0.5em 0;  
-    padding: 0.5em 1em;  
-    background-color: #f4f4f4;  
-    border: 1px solid #ddd;  
-    cursor: move;  
-    position: relative; 
-}  
+#table tr {
+    margin: 0.5em 0;
+    padding: 0.5em 1em;
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
+    cursor: move;
+    position: relative;
+}
 
-#table tr.placeholder {  
-    background-color: transparent;  
-    border: 1px dashed #666;  
-    margin: 0.5em 0;  
-    padding: 0;  
+#table tr.placeholder {
+    background-color: transparent;
+    border: 1px dashed #666;
+    margin: 0.5em 0;
+    padding: 0;
     height: 2em;
     display: none;
 }  
 
 #table tr.dragging {  
     opacity: 0.5;  
+}
+
+.fade-out {
+    opacity: 0.4; /* 你可以調整這個值來控制淡化的程度 */
+    transition: opacity 0.1s;
 }
